crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__headers.qasm-parse.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: parse_snap
---
id: tests/snippets/invalid/statements/headers.qasm
expect-parse: Diag
--- parser ---
ok: false
panicked: false
errors: 1
--- ast ---
(no ast)
