crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__loop.qasm-sema.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: sema_snap
---
id: tests/snippets/invalid/statements/loop.qasm
expect-sema: Skip
--- sema ---
ok: false
panicked: true
panic: true
errors: 0
--- asg ---
(no asg)
