crates/pipeline-tests/tests/snapshots/runner__tests__snippets__invalid__statements__tokens.qasm-lex.snap
---
source: crates/pipeline-tests/tests/runner.rs
expression: lex_snap
---
id: tests/snippets/invalid/statements/tokens.qasm
expect-lex: Diag
--- source ---

#;
3x;
x@x;
3.4.3;
3.4e3e3;
// Bad integer literals.
3__4;
3_4_;
0b123;
0B123;
0o789;
0O789;
0x12g;
0X12g;
12af;
--- lexer ---
ok: false
errors: 1
[0] Whitespace "\n" @0..1
[1] InvalidIdent "#" @1..2
[2] Semi ";" @2..3
[3] Whitespace "\n" @3..4
[4] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "3x" @4..6
[5] Semi ";" @6..7
[6] Whitespace "\n" @7..8
[7] Ident "x" @8..9
[8] Annotation "@x;" @9..12
[9] Whitespace "\n" @12..13
[10] Literal { kind: Float { base: Decimal, empty_exponent: false }, suffix_start: 3 } "3.4" @13..16
[11] Literal { kind: Float { base: Decimal, empty_exponent: false }, suffix_start: 2 } ".3" @16..18
[12] Semi ";" @18..19
[13] Whitespace "\n" @19..20
[14] Literal { kind: Float { base: Decimal, empty_exponent: false }, suffix_start: 5 } "3.4e3e3" @20..27
[15] Semi ";" @27..28
[16] Whitespace "\n" @28..29
[17] LineComment "// Bad integer literals." @29..53
[18] Whitespace "\n" @53..54
[19] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 4 } "3__4" @54..58
[20] Semi ";" @58..59
[21] Whitespace "\n" @59..60
[22] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 4 } "3_4_" @60..64
[23] Semi ";" @64..65
[24] Whitespace "\n" @65..66
[25] Literal { kind: Int { base: Binary, empty_int: false }, suffix_start: 5 } "0b123" @66..71
[26] Semi ";" @71..72
[27] Whitespace "\n" @72..73
[28] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0B123" @73..78
[29] Semi ";" @78..79
[30] Whitespace "\n" @79..80
[31] Literal { kind: Int { base: Octal, empty_int: false }, suffix_start: 5 } "0o789" @80..85
[32] Semi ";" @85..86
[33] Whitespace "\n" @86..87
[34] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0O789" @87..92
[35] Semi ";" @92..93
[36] Whitespace "\n" @93..94
[37] Literal { kind: Int { base: Hexadecimal, empty_int: false }, suffix_start: 4 } "0x12g" @94..99
[38] Semi ";" @99..100
[39] Whitespace "\n" @100..101
[40] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 1 } "0X12g" @101..106
[41] Semi ";" @106..107
[42] Whitespace "\n" @107..108
[43] Literal { kind: Int { base: Decimal, empty_int: false }, suffix_start: 2 } "12af" @108..112
[44] Semi ";" @112..113
[45] Whitespace "\n" @113..114
